# xavierxcn

./: .gitignore  Makefile  config.yaml
.claude/commands/xavier/: release.md
content/astrology/aspects/: conjunction.md  opposition.md  sextile.md  square.md  trine.md
content/astrology/basics/: branches.md  chart-basics.md  history.md  intro.md  sign-classifications.md
content/astrology/houses/: eighth-house.md  eleventh-house.md  fifth-house.md  first-house.md  fourth-house.md  ninth-house.md  second-house.md  seventh-house.md  sixth-house.md  tenth-house.md  third-house.md  twelfth-house.md
content/astrology/planets/: jupiter.md  mars.md  mercury.md  moon.md  neptune.md  pluto.md  saturn.md  sun.md  uranus.md  venus.md
content/astrology/signs/: aquarius.md  aries.md  cancer.md  capricorn.md  gemini.md  leo.md  libra.md  pisces.md  sagittarius.md  scorpio.md  taurus.md  virgo.md
content/pages/: about.md
content/posts/: 2025-china-economy-review.md  building-effective-agents.md  hello-world.md  openspec-1.0-guide.md
content/tools/: _meta.yaml
content/tools/decoration-budget/: template.html
content/tools/md2wechat/: template.html
content/tools/natal-chart/: template.html
docs/: index.html  search-index.json
docs/about/: index.html
docs/archive/: index.html
docs/astrology/: index.html
docs/tools/: index.html
generator/: Cargo.toml
generator/src/: build.rs  config.rs  main.rs
generator/src/content/: frontmatter.rs  markdown.rs  mod.rs
generator/src/render/: mod.rs  syntax.rs  template.rs
openspec/: project.md
(+161 files in other folders)
