[package]
name = "xavierxcn-generator"
version = "0.1.0"
edition = "2021"
description = "A static site generator for xavierxcn personal blog"
authors = ["Xavier Fan"]

[dependencies]
# Markdown parsing
pulldown-cmark = { version = "0.10", features = ["simd"] }

# Template engine
tera = "1.19"

# YAML front matter parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# File system operations
walkdir = "2.4"
glob = "0.3"

# HTML processing
ammonia = "4.0"

# Syntax highlighting
syntect = "5.2"
html-escape = "0.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (for watching files)
tokio = { version = "1.35", features = ["full"] }
notify = "6.1"

# HTTP server for development
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# URL handling
slug = "0.1"
url = "2.5"

[dev-dependencies]
tempfile = "3.9"
pretty_assertions = "1.4"
